update code to comply to java 11 primitives